update save asset, unit test
